--- a/guess.tmpl
+++ b/guess.tmpl
@@ -8,13 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
+  
   <body>
   
-  
-    <h2>Guess a number between 1 and 20</h2>
-	<input id="number" type="number">
-	
-	
+	<center>
+		<h2>{{.Output}}</h2>
+		<form action="/guess" method="GET">
+			<input type="text" name="guess">
+			<input type="submit" value="Guess">
+		</form>
+	</center>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
